HW6. Finished right menu

--- a/Practice/HW6/index.html
+++ b/Practice/HW6/index.html
@@ -307,16 +307,43 @@
                 <div class="list__name__circle"><div class="list__name__circle--pict"></div></div>
                 бренды:
             </div>
+            <form class="brands_search" action="/">
+                <div class="list__name list__name--item list__name--item--tires">
+                    <div class="list__item__circle"><div class="list__name__circle_small"></div></div>
+                    шины
+                </div>
 
-            <div class="list__name list__name--item">
-                <div class="list__item__circle"><div class="list__name__circle_small"></div></div>
-                шины
-            </div>
+                <label class="check">
+                    <input type="checkbox" class="checkbox_style"><span class="brands_search_variant">Бренд 1</span>
+                </label>
 
-            <div class="list__name list__name--item">
-                <div class="list__item__circle"><div class="list__name__circle_small"></div></div>
-                диски
-            </div>
+                <label class="check">
+                    <input type="checkbox" class="checkbox_style"><span class="brands_search_variant">Бренд 2</span>
+                </label>
+
+                <label class="check">
+                    <input type="checkbox" class="checkbox_style"><span class="brands_search_variant">Бренд 3</span>
+                </label>
+
+                <div class="list__name list__name--item list__name--item--discs">
+                    <div class="list__item__circle list__item__circle--discs"><div class="list__name__circle_small"></div></div>
+                    диски
+                </div>
+                <label class="check">
+                    <input type="checkbox" class="checkbox_style--discs"><span class="brands_search_variant brands_search_variant--discs">Бренд 1</span>
+                </label>
+
+                <label class="check">
+                    <input type="checkbox" class=" checkbox_style--discs2"><span class="brands_search_variant brands_search_variant--discs2">Бренд 2</span>
+                </label>
+
+                <label class="check ">
+                    <input type="checkbox" class="checkbox_style--discs3" ><span class="brands_search_variant brands_search_variant--discs3">Бренд 3</span>
+                </label>
+
+                <input type="submit" value="выбрать" class="brands__button_submit">
+
+            </form>
 
         </aside>
 
