HW6. Added Logo banners

--- a/Practice/HW6/index.html
+++ b/Practice/HW6/index.html
@@ -303,165 +303,169 @@
 
     <main class="content_wrapper">
 
-            <aside class="brands">
-                <div class="list__name list__name--brands">
-                    <div class="list__name__circle"><div class="list__name__circle--pict"></div></div>
-                    бренды:
+        <aside class="brands">
+            <div class="list__name list__name--brands">
+                <div class="list__name__circle"><div class="list__name__circle--pict"></div></div>
+                бренды:
+            </div>
+            <form class="brands_search" action="/">
+                <div class="list__name list__name--item list__name--item--tires">
+                    <div class="list__item__circle"><div class="list__name__circle_small"></div></div>
+                    шины
                 </div>
-                <form class="brands_search" action="/">
-                    <div class="list__name list__name--item list__name--item--tires">
-                        <div class="list__item__circle"><div class="list__name__circle_small"></div></div>
-                        шины
-                    </div>
 
-                    <label class="check">
-                        <input type="checkbox" class="checkbox_style"><span class="brands_search_variant">Бренд 1</span>
-                    </label>
+                <label class="check">
+                    <input type="checkbox" class="checkbox_style"><span class="brands_search_variant">Бренд 1</span>
+                </label>
 
-                    <label class="check">
-                        <input type="checkbox" class="checkbox_style"><span class="brands_search_variant">Бренд 2</span>
-                    </label>
+                <label class="check">
+                    <input type="checkbox" class="checkbox_style"><span class="brands_search_variant">Бренд 2</span>
+                </label>
 
-                    <label class="check">
-                        <input type="checkbox" class="checkbox_style"><span class="brands_search_variant">Бренд 3</span>
-                    </label>
+                <label class="check">
+                    <input type="checkbox" class="checkbox_style"><span class="brands_search_variant">Бренд 3</span>
+                </label>
 
-                    <div class="list__name list__name--item list__name--item--discs">
-                        <div class="list__item__circle list__item__circle--discs"><div class="list__name__circle_small"></div></div>
-                        диски
-                    </div>
-                    <label class="check">
-                        <input type="checkbox" class="checkbox_style--discs"><span class="brands_search_variant brands_search_variant--discs">Бренд 1</span>
-                    </label>
+                <div class="list__name list__name--item list__name--item--discs">
+                    <div class="list__item__circle list__item__circle--discs"><div class="list__name__circle_small"></div></div>
+                    диски
+                </div>
+                <label class="check">
+                    <input type="checkbox" class="checkbox_style--discs"><span class="brands_search_variant brands_search_variant--discs">Бренд 1</span>
+                </label>
 
-                    <label class="check">
-                        <input type="checkbox" class=" checkbox_style--discs2"><span class="brands_search_variant brands_search_variant--discs2">Бренд 2</span>
-                    </label>
+                <label class="check">
+                    <input type="checkbox" class=" checkbox_style--discs2"><span class="brands_search_variant brands_search_variant--discs2">Бренд 2</span>
+                </label>
 
-                    <label class="check ">
-                        <input type="checkbox" class="checkbox_style--discs3" ><span class="brands_search_variant brands_search_variant--discs3">Бренд 3</span>
-                    </label>
+                <label class="check ">
+                    <input type="checkbox" class="checkbox_style--discs3" ><span class="brands_search_variant brands_search_variant--discs3">Бренд 3</span>
+                </label>
 
-                    <input type="submit" value="выбрать" class="brands__button_submit">
+                <input type="submit" value="выбрать" class="brands__button_submit">
 
-                </form>
+            </form>
 
             </aside>
 
-            <aside class="catalog__menu">
-                <div class="list__name">
-                    <div class="list__name__circle"><div class="list__name__circle--pict"></div></div>
-                    каталог продукции:
-                </div>
+        <aside class="catalog__menu">
+            <div class="list__name">
+                <div class="list__name__circle"><div class="list__name__circle--pict"></div></div>
+                каталог продукции:
+            </div>
 
-                <nav>
-                    <ul class="catalog__list">
-                        <li><div class="list__name list__name--item">
-                                <div class="list__item__circle"><div class="list__name__circle_small"></div></div>шины</div>
-                            <ul class="catalog__submenu">
-                                <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 1</a> </li>
-                                <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 2</a> </li>
-                                <li class="catalog__submenu__item catalog__submenu__item--3"><a class="catalog__submenu__link ">Наименование 3</a> </li>
-                                <li class="catalog__submenu__item catalog__submenu__item--4"><a class="catalog__submenu__link ">Наименование 4</a> </li>
-                            </ul>
-                        </li>
+            <nav>
+                <ul class="catalog__list">
+                    <li><div class="list__name list__name--item">
+                        <div class="list__item__circle"><div class="list__name__circle_small"></div></div>шины</div>
+                        <ul class="catalog__submenu">
+                            <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 1</a> </li>
+                            <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 2</a> </li>
+                            <li class="catalog__submenu__item catalog__submenu__item--3"><a class="catalog__submenu__link ">Наименование 3</a> </li>
+                            <li class="catalog__submenu__item catalog__submenu__item--4"><a class="catalog__submenu__link ">Наименование 4</a> </li>
+                        </ul>
+                    </li>
 
-                        <li><div class="list__name list__name--item">
-                            <div class="list__item__circle"><div class="list__name__circle_small"></div></div>диски</div>
-                            <ul class="catalog__submenu">
-                                <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 1</a> </li>
-                                <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 2</a> </li>
-                                <li class="catalog__submenu__item catalog__submenu__item--3"><a class="catalog__submenu__link ">Наименование 3</a> </li>
-                                <li class="catalog__submenu__item catalog__submenu__item--4"><a class="catalog__submenu__link ">Наименование 4</a> </li>
-                            </ul>
-                        </li>
+                    <li><div class="list__name list__name--item">
+                        <div class="list__item__circle"><div class="list__name__circle_small"></div></div>диски</div>
+                        <ul class="catalog__submenu">
+                            <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 1</a> </li>
+                            <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 2</a> </li>
+                            <li class="catalog__submenu__item catalog__submenu__item--3"><a class="catalog__submenu__link ">Наименование 3</a> </li>
+                            <li class="catalog__submenu__item catalog__submenu__item--4"><a class="catalog__submenu__link ">Наименование 4</a> </li>
+                        </ul>
+                    </li>
 
-                        <li><div class="list__name list__name--item">
-                            <div class="list__item__circle"><div class="list__name__circle_small"></div></div>болты</div>
-                            <ul class="catalog__submenu">
-                                <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 1</a> </li>
-                                <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 2</a> </li>
-                                <li class="catalog__submenu__item catalog__submenu__item--3"><a class="catalog__submenu__link ">Наименование 3</a> </li>
-                                <li class="catalog__submenu__item catalog__submenu__item--4"><a class="catalog__submenu__link ">Наименование 4</a> </li>
-                            </ul>
-                        </li>
-                    </ul>
-                </nav>
+                    <li><div class="list__name list__name--item">
+                        <div class="list__item__circle"><div class="list__name__circle_small"></div></div>болты</div>
+                        <ul class="catalog__submenu">
+                            <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 1</a> </li>
+                            <li class="catalog__submenu__item"><a class="catalog__submenu__link">Наименование 2</a> </li>
+                            <li class="catalog__submenu__item catalog__submenu__item--3"><a class="catalog__submenu__link ">Наименование 3</a> </li>
+                            <li class="catalog__submenu__item catalog__submenu__item--4"><a class="catalog__submenu__link ">Наименование 4</a> </li>
+                        </ul>
+                    </li>
+                </ul>
+            </nav>
         </aside>
 
-        <div class="tovar__preview">
+        <div class="tovar__preview clearfix">
             <div class="tovar__item">
                 <div class="tovar__brand">Goodyear</div>
                 <div class="tovar__model">Ultra Grip Extreme</div>
-                <img class="tovar__image">
+                <div class="tovar__image"> <img class="tovar__image--position" alt="goodyear tire" src="img/tovar__image_goodyear.jpg" width="74"></div>
                 <div class="tovar__price">90.00<span class="tovar__price--valuta"> грн.</span></div>
             </div>
 
             <div class="tovar__item">
                 <div class="tovar__brand">Nokian</div>
                 <div class="tovar__model">Hakkapeliitta R</div>
-                <img class="tovar__image">
+                <div class="tovar__image"><img class="tovar__image--position" alt="nokian tire" src="img/tovar__image_nokian.jpg" width="69"></div>
                 <div class="tovar__price">115.00<span class="tovar__price--valuta"> грн.</span></div>
-
             </div>
 
             <div class="tovar__item">
                 <div class="tovar__brand">Hankook</div>
                 <div class="tovar__model">K 708 155/65 R14</div>
-                <img class="tovar__image">
+                <div class="tovar__image"><img class="tovar__image--position" alt="hankook tire" src="img/tovar__image_hankook.jpg" width="79"></div>
                 <div class="tovar__price">393.00<span class="tovar__price--valuta"> грн.</span></div>
-
             </div>
 
             <div class="tovar__item">
                 <div class="tovar__brand">Goodyear</div>
                 <div class="tovar__model">Ultra Grip Extreme</div>
-                <img class="tovar__image">
+                <div class="tovar__image"> <img class="tovar__image--position" alt="goodyear tire" src="img/tovar__image_goodyear.jpg" width="74"></div>
                 <div class="tovar__price">90.00<span class="tovar__price--valuta"> грн.</span></div>
-
             </div>
 
             <div class="tovar__item">
                 <div class="tovar__brand">Nokian</div>
                 <div class="tovar__model">Hakkapeliitta R</div>
-                <img class="tovar__image">
+                <div class="tovar__image"><img class="tovar__image--position" alt="nokian tire" src="img/tovar__image_nokian.jpg" width="69"></div>
                 <div class="tovar__price">115.00<span class="tovar__price--valuta"> грн.</span></div>
-
             </div>
 
             <div class="tovar__item">
                 <div class="tovar__brand">Hankook</div>
                 <div class="tovar__model">K 708 155/65 R14</div>
-                <img class="tovar__image">
+                <div class="tovar__image"><img class="tovar__image--position" alt="hankook tire" src="img/tovar__image_hankook.jpg" width="79"></div>
                 <div class="tovar__price">393.00<span class="tovar__price--valuta"> грн.</span></div>
-
             </div>
 
             <div class="tovar__item">
                 <div class="tovar__brand">Goodyear</div>
                 <div class="tovar__model">Ultra Grip Extreme</div>
-                <img class="tovar__image">
+                <div class="tovar__image"> <img class="tovar__image--position" alt="goodyear tire" src="img/tovar__image_goodyear.jpg" width="74"></div>
                 <div class="tovar__price">90.00<span class="tovar__price--valuta"> грн.</span></div>
-
             </div>
 
             <div class="tovar__item">
                 <div class="tovar__brand">Nokian</div>
                 <div class="tovar__model">Hakkapeliitta R</div>
-                <img class="tovar__image">
+                <div class="tovar__image"><img class="tovar__image--position" alt="nokian tire" src="img/tovar__image_nokian.jpg" width="69"></div>
                 <div class="tovar__price">115.00<span class="tovar__price--valuta"> грн.</span></div>
-
             </div>
 
             <div class="tovar__item">
                 <div class="tovar__brand">Hankook</div>
                 <div class="tovar__model">K 708 155/65 R14</div>
-                <img class="tovar__image">
+                <div class="tovar__image"><img class="tovar__image--position" alt="hankook tire" src="img/tovar__image_hankook.jpg" width="79"></div>
                 <div class="tovar__price">393.00<span class="tovar__price--valuta"> грн.</span></div>
-
             </div>
-
         </div>
+
+        <aside class="brand__logo">
+            <ul class="brand__logo__list">
+                <li class="brand__logo__item"><a class="brand__logo__link" href="https://www.toyotire.ru/" target="_blank"></a></li>
+                <li class="brand__logo__item"><a class="brand__logo__link"  href="http://bridgestoneua.com/" target="_blank"></a></li>
+                <li class="brand__logo__item"><a class="brand__logo__link"  href="https://www.continental.ua/legkovi" target="_blank"></a></li>
+                <li class="brand__logo__item"><a class="brand__logo__link"  href="https://www.coopertires.com.au/" target="_blank"></a></li>
+                <li class="brand__logo__item"><a class="brand__logo__link"  href="http://www.avon-tyres.co.uk/" target="_blank"></a></li>
+                <li class="brand__logo__item"><a class="brand__logo__link"  href="http://www.tirefactory.com/home.aspx" target="_blank"></a></li>
+                <li class="brand__logo__item"><a class="brand__logo__link"  href="https://www.pirelli.com/global/en-ww/homepage" target="_blank"></a></li>
+                <li class="brand__logo__item"><a class="brand__logo__link"  href="http://www.dunloptires.com/en-US/tires-home" target="_blank"></a></li>
+            </ul>
+        </aside>
 
 
     </main>
