HW6. Finished logo banners and Started footer

--- a/Practice/HW6/index.html
+++ b/Practice/HW6/index.html
@@ -34,11 +34,11 @@
         <div class="header_menu">
             <nav>
                 <ul class="main_menu">
-                    <li class="main_menu__item"><a href="#" class="main_menu__link about_company">о компании</a></li>
-                    <li class="main_menu__item"><a href="#" class="main_menu__link payment">оплата</a></li>
-                    <li class="main_menu__item"><a href="#" class="main_menu__link ship">доставка</a></li>
-                    <li class="main_menu__item"><a href="#" class="main_menu__link articles">статьи</a></li>
-                    <li class="main_menu__item"><a href="#" class="main_menu__link contacts">контакты</a></li>
+                    <li class="main_menu__item"><a href="#" class="main_menu__link">о компании</a></li>
+                    <li class="main_menu__item"><a href="#" class="main_menu__link">оплата</a></li>
+                    <li class="main_menu__item"><a href="#" class="main_menu__link">доставка</a></li>
+                    <li class="main_menu__item"><a href="#" class="main_menu__link">статьи</a></li>
+                    <li class="main_menu__item"><a href="#" class="main_menu__link">контакты</a></li>
                 </ul>
             </nav>
             <div class="korzina">
@@ -467,11 +467,18 @@
             </ul>
         </aside>
 
-
     </main>
 
-    <footer>
-
+    <footer class="footer">
+        <nav>
+            <ul class="main_menu--footer">
+                <li class="main_menu__item main_menu__item--footer"><a href="#" class="main_menu__link--footer about_company">О компании</a></li>
+                <li class="main_menu__item main_menu__item--footer"><a href="#" class="main_menu__link--footer ship">Доставка</a></li>
+                <li class="main_menu__item main_menu__item--footer"><a href="#" class="main_menu__link--footer articles">Статьи</a></li>
+                <li class="main_menu__item main_menu__item--footer"><a href="#" class="main_menu__link--footer contacts">Контакты</a></li>
+            </ul>
+        </nav>
+        <div class="footer__copyright">Создание сайта © Global Vision</div>
     </footer>
 
 
