HW7. 320 News block

--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<html lang="la">
 <head>
     <title>Home Work 7-8</title>
     <meta charset="utf-8">
@@ -20,41 +21,78 @@
 
             <div class="slider">
                 <div class="slider__name">lorem ipsum dolor</div>
-                <div class="slider__name slider__name--description">it will make all of your dreams come</div>
-                <ul class="slider__list">
-                    <li class="slider__bulit"></li>
-                    <li class="slider__bulit"><div class="slider__bulit--active"></div></li>
-                    <li class="slider__bulit"></li>
-                    <li class="slider__bulit"></li>
+                <div class="slider__description">it will make all of your dreams come</div>
+                <ul class="slider__list header__slider__list">
+                    <li class="slider__bullet"></li>
+                    <li class="slider__bullet"><div class="slider__bullet--active"></div></li>
+                    <li class="slider__bullet"></li>
+                    <li class="slider__bullet"></li>
                 </ul>
             </div>
         </header>
 
-        <section class="info">
-            <div class="info_block">
-                <div class="info_block__pict"></div>
+        <section class="about_company">
+            <div class="info_block about_company__info_block">
                 <div class="info_block__name">about our company</div>
-                <div class="info_block__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posu</div>
+                <div class="info_block__summary about_company__info_block__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
+                    Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
+                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</div>
                 <a class="info_block__link" href="">read more</a>
             </div>
 
-            <div class="info_block">
-                <div class="info_block__pict"></div>
+            <div class="info_block about_company__info_block">
                 <div class="info_block__name">about our company</div>
-                <div class="info_block__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posu</div>
+                <div class="info_block__summary about_company__info_block__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
+                    Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
+                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</div>
                 <a class="info_block__link" href="">read more</a>
             </div>
 
 
-            <div class="info_block">
-                <div class="info_block__pict"></div>
+            <div class="info_block about_company__info_block">
                 <div class="info_block__name">about our company</div>
-                <div class="info_block__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posu</div>
+                <div class="info_block__summary about_company__info_block__summary">Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
+                    Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar.
+                    Quisque urna risus, mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Phasellus eu lobortis odio. In hac habitasse platea dictumst.
+                    Proin vestibulum turpis at mauris aliquam non euismod lorem euismod. Aenean dapibus ultricies enim, eget vulputate leo feugiat non.</div>
                 <a class="info_block__link" href="">read more</a>
             </div>
-
 
         </section>
+
+        <section class="news">
+            <div class="info_block news__info_block">
+                <img src="img/news_avatar.png" class="avatar" alt="">
+                <div class="info_block__name info_block__name--color">PINGBULLER</div>
+                <div class="info_block__name info_block__name--submane">starts here</div>
+                <div class="info_block__summary  news__info_block__summary">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
+                    Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus,
+                    mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
+                    Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
+                    Phasellus eu lobortis odio. In hac habitasse platea dictumst. Proin vestibulum turpis at mauris aliquam non euismod lorem euismod.
+                    Aenean dapibus ultricies enim, eget vulputate leo feugiat non.
+                </div>
+            </div>
+
+            <ul class="slider__list news__slider__list">
+                <li class="slider__bullet slider__bullet--theme--light"></li>
+                <li class="slider__bullet slider__bullet--theme--light">
+                    <div class="slider__bullet--active  slider__bullet--theme--light--active"></div>
+                </li>
+                <li class="slider__bullet slider__bullet--theme--light"></li>
+                <li class="slider__bullet slider__bullet--theme--light"></li>
+            </ul>
+        </section>
+
+
 
     </div>
 
