--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <div class="body_wrapper">
+    <div class="body_wrapper position-center">
         <header class="header position-center">
             <div class="logo">PINGBULL<span class="logo--end">ER</span></div>
             <nav>
@@ -74,7 +74,7 @@
 
         <section class="news position-center">
             <div class="news__info_block">
-                <img src="img/news_avatar.png" class="avatar" alt="">
+                <img src="img/news_avatar.png" class="avatar" alt="avatar">
                 <div class="title news__name">PINGBULLER</div>
                 <div class="title title--description news__title--description">starts here</div>
                 <div class="summary news__summary">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
@@ -116,7 +116,20 @@
 
         </section>
 
+        <section class="banners">
+            <a href="https://marathon.ua/billabong/" target="_blank"> <img src="img/banner1.png" alt="billabong" class="banners__item banner1"></a>
+            <a href="https://www.gucci.com/int/en/" target="_blank"><img src="img/banner2.png" alt="gucci" class="banners__item banner2"></a>
+            <a href="#"><img src="img/banner3.png" alt="" class="banners__item banner3"></a>
+            <a href="http://www.awsmbrand.com/" target="_blank"><img src="img/banner4.png" alt="awsm" class="banners__item banner4"></a>
+            <a href="https://bigl.ua/sc-14515-rvca" target="_blank"><img src="img/banner5.png" alt="rvca" class="banners__item banner5"></a>
+            <a href="https://www.amazon.com/VonZipper/pages/2603402011" target="_blank">
+                <img src="img/banner6.png" alt="VonZipper" class="banners__item banner6">
+            </a>
+        </section>
 
+        <footer class="footer position-center">
+            <div class="summary summary--size--s footer__summary">Designed by <span class="summary--bold"> Pingbull AS</span></div>
+        </footer>
 
     </div>
 
