--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -18,6 +18,7 @@
 
 <body>
     <div class="body_wrapper position-center">
+        <!--HEADER-->
         <header class="header position-center">
             <div class="overlay"></div>
             <div class="logo">PINGBULL<span class="logo--end">ER</span></div>
@@ -45,6 +46,7 @@
             </div>
         </header>
 
+        <!--ABOUT COMPANY-->
         <section class="about_company position-center">
             <div class="info_block">
                 <div class="title">about our company</div>
@@ -81,6 +83,7 @@
 
         </section>
 
+        <!--NEWS-->
         <section class="news position-center">
             <div class="news__info_block">
                 <img src="img/news_avatar.png" class="avatar" alt="avatar">
@@ -105,21 +108,22 @@
             </ul>
         </section>
 
+        <!--RECENT UODATES-->
         <section class="recent_updates">
-            <h2 class="title title--size--l updates__title">recent updates</h2>
+            <h2 class="title title--size--l recent_updates__title">recent updates</h2>
             <div class="recent_updates__post">
-                <div class="summary summary--bold">Nunc turpis neque</div>
-                <div class="summary">Posted by Admin on March 13</div>
+                <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
+                <div class="summary">Posted by Admin on March 13<span class="hidden"> 2012<span class="hidden-m"> in Recent News</span></span></div>
             </div>
 
             <div class="recent_updates__post">
-                <div class="summary summary--bold">Nunc turpis neque</div>
-                <div class="summary">Posted by Admin on March 13</div>
+                <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
+                <div class="summary">Posted by Admin on March 13<span class="hidden"> 2012<span class="hidden-m"> in Category</span></span></div>
             </div>
 
             <div class="recent_updates__post">
-                <div class="summary summary--bold">Nunc turpis neque</div>
-                <div class="summary">Posted by Admin on March 13</div>
+                <div class="summary summary--bold">Nunc turpis neque<span class="hidden"> feugiat eget</span></div>
+                <div class="summary">Posted by Admin on March 13<span class="hidden"> 2012<span class="hidden-m">in Blog Updates</span></span></div>
             </div>
             <a class="link recent_updates__link" href="">more blog posts</a>
 
