--- a/Practice/HW7/index.html
+++ b/Practice/HW7/index.html
@@ -19,31 +19,33 @@
 <body>
     <div class="body_wrapper position-center">
         <!--HEADER-->
+
         <header class="header position-center">
             <div class="overlay"></div>
-            <div class="logo">PINGBULL<span class="logo--end">ER</span></div>
-            <nav>
-                <ul class="menu">
-                    <li class="menu__item"><a class="menu__link" href="">HOME</a></li>
-                </ul>
-            </nav>
+                <div class="logo">PINGBULL<span class="logo--end">ER</span></div>
+                <nav>
+                    <ul class="menu">
+                        <li class="menu__item"><a class="menu__link" href="">HOME</a></li>
+                    </ul>
+                </nav>
 
-            <div class="slider">
-                <div class="slider__wrapper">
-                    <div class="slider__text">
-                        <div class="slider__name">lorem ipsum dolor</div>
-                        <div class="slider__description">it will make all of your dreams come</div>
+                <div class="slider">
+                    <div class="slider__wrapper">
+                        <div class="slider__text">
+                            <div class="slider__name">lorem ipsum dolor</div>
+                            <div class="slider__description">it will make all of your dreams come</div>
+                        </div>
+                        <img src="img/header__slider_iphone.png" class="slider__pict">
+
                     </div>
-                    <img src="img/header__slider_iphone.png" class="slider__pict">
-
+                    <ul class="switch slider__switch">
+                        <li class="switch__bullet"></li>
+                        <li class="switch__bullet"><div class="switch__center"></div></li>
+                        <li class="switch__bullet"></li>
+                        <li class="switch__bullet"></li>
+                    </ul>
                 </div>
-                <ul class="switch slider__switch">
-                    <li class="switch__bullet"></li>
-                    <li class="switch__bullet"><div class="switch__center"></div></li>
-                    <li class="switch__bullet"></li>
-                    <li class="switch__bullet"></li>
-                </ul>
-            </div>
+
         </header>
 
         <!--ABOUT COMPANY-->
@@ -83,13 +85,13 @@
 
         </section>
 
-        <!--NEWS-->
-        <section class="news position-center">
-            <div class="news__info_block">
+        <!--PINGBULLER -->
+        <section class="pingbuller">
+            <div class="pingbuller__info_block">
                 <img src="img/news_avatar.png" class="avatar" alt="avatar">
-                <div class="title news__title">PINGBULLER</div>
-                <div class="title title--description news__title--description">starts here</div>
-                <div class="summary news__summary">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
+                <div class="title pingbuller__title">PINGBULLER</div>
+                <div class="title title--description pingbuller__title--description">starts here</div>
+                <div class="summary pingbuller__summary">“Nunc turpis neque, feugiat eget eleifend et, lacinia non neque. Praesent rhoncus ultrices posuere.
                     Pellentesque vel lacus eget nisi convallis auctor. Nam vitae lectus eu libero pellentesque pulvinar urna risus,
                     mattis pulvinar bibendum in, venenatis quis neque. Mauris nec metus ultricies erat consequat dignissim non eu nisl.”
                     Quisque libero tellus, pharetra et eleifend id, interdum elementum arcu. Suspendisse quis mauris non ligula rutrum faucibus eu quis odio.
@@ -98,7 +100,7 @@
                 </div>
             </div>
 
-            <ul class="switch news__switch">
+            <ul class="switch pingbuller__switch">
                 <li class="switch__bullet switch__bullet--theme--light"></li>
                 <li class="switch__bullet switch__bullet--theme--light">
                     <div class="switch__center  switch__center--theme--light"></div>
@@ -129,15 +131,18 @@
 
         </section>
 
+        <!--BANNERS-->
         <section class="banners">
-            <a href="https://marathon.ua/billabong/" target="_blank"> <img src="img/banner1.png" alt="billabong" class="banners__item banner1"></a>
-            <a href="https://www.gucci.com/int/en/" target="_blank"><img src="img/banner2.png" alt="gucci" class="banners__item banner2"></a>
-            <a href="#"><img src="img/banner3.png" alt="" class="banners__item banner3"></a>
-            <a href="http://www.awsmbrand.com/" target="_blank"><img src="img/banner4.png" alt="awsm" class="banners__item banner4"></a>
-            <a href="https://bigl.ua/sc-14515-rvca" target="_blank"><img src="img/banner5.png" alt="rvca" class="banners__item banner5"></a>
-            <a href="https://www.amazon.com/VonZipper/pages/2603402011" target="_blank">
-                <img src="img/banner6.png" alt="VonZipper" class="banners__item banner6">
-            </a>
+            <div class="banners__wrapper clearfix">
+                <a href="https://marathon.ua/billabong/" target="_blank"> <img src="img/banner1.png" alt="billabong" class="banners__item banner1"></a>
+                <a href="https://www.gucci.com/int/en/" target="_blank"><img src="img/banner2.png" alt="gucci" class="banners__item banner2"></a>
+                <a href="#"><img src="img/banner3.png" alt="" class="banners__item banner3"></a>
+                <a href="http://www.awsmbrand.com/" target="_blank"><img src="img/banner4.png" alt="awsm" class="banners__item banner4"></a>
+                <a href="https://bigl.ua/sc-14515-rvca" target="_blank"><img src="img/banner5.png" alt="rvca" class="banners__item banner5"></a>
+                <a href="https://www.amazon.com/VonZipper/pages/2603402011" target="_blank">
+                    <img src="img/banner6.png" alt="VonZipper" class="banners__item banner6">
+                </a>
+            </div>
         </section>
 
         <footer class="footer position-center">
